--- a/Modul5/Modul5.csproj
+++ b/Modul5/Modul5.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileName.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Итог.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
